# desktop_app_source_updater

./: .copier-answers.yml  .gitignore  AGENTS.md  README.md  next_steps.md  project_overview.md  pyproject.toml  work_log.md
desktop_app_source_updater/: __init__.py  build_update_asset.py  core.py  python_config.py
src/desktop_source_updater/: build_update_asset.py  core.py
tests/: test_build_update_asset.py  test_core.py  test_python_config.py
